# ND_Project-

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
07_SRC/: tree.md
07_SRC/algorithms/: README.md  perona_malik.py
07_SRC/core/: README.md  base_converter.py  config.py  layout_axes.py  operator_core.py  tag_registry.py
07_SRC/datasets/: README.md  operator_dataset.py
07_SRC/deep_learn/: FEUNet_v2.py  README.md  feunet_config.yaml  losses.py  utils.py  wrt_cfg.py
07_SRC/deep_learn/w_upbr/: FEUNet.py  Fusion.py  GLCA.py  dataset.py  metrics.py  projectionHead.py
07_SRC/degradations/: README.md  blur.py  inpaint.py  noise.py
07_SRC/filters/: README.md  artifact_cleaning.py  edge_aware_filter.py  perona_enhancing.py
07_SRC/operators/: README.md  axis_tracker.py  diff_operator.py  edge_detector.py  feature_extractor.py  gaussian.py  image_io.py  image_operator.py  image_processor.py  metrics.py  preprocessor.py  resize_image.py  segmenter_nd.py  thresholding.py  transform_manager.py
07_SRC/requirements/: install_packages.py  requirements.txt
07_SRC/tests/: README.md
07_SRC/tests/experiments/: test_converter_tracker_resize.py  test_diff_operator.py  test_edge_detector.py  test_features_extractor.py  test_gaussian.py  test_img_proc_and_metrics.py  test_morphology.py  test_operator_dataset.py  test_perona_malik.py  test_pm_prototype.py  test_preprocess.py  test_segmentation_prototype.py  test_segmenter_nd.py  (+1 more)
07_SRC/utils/: README.md  decorators.py  emojis.py  labels_tools.py  logger.py  nd_math.py  nd_tools.py  segmentations_tools.py
(+2 files in other folders)
